--- a/environment.yml
+++ b/environment.yml
@@ -147,7 +147,6 @@ dependencies:
   - pip=22.1.2=py39h06a4308_0
   - pixman=0.38.0=h516909a_1003
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - platformdirs=2.5.2=py39h06a4308_0
   - ply=3.11=py39h06a4308_0
   - prometheus_client=0.15.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.36=pyha770c72_0
@@ -219,11 +218,14 @@ dependencies:
       - astunparse==1.6.3
       - attrs==22.1.0
       - cachetools==5.2.0
+      - cfgv==3.4.0
       - click==8.1.3
       - dataclasses==0.6
+      - distlib==0.3.7
       - evidently==0.2.0
       - exceptiongroup==1.0.4
       - fastapi==0.87.0
+      - filelock==3.13.1
       - flatbuffers==22.11.23
       - gast==0.4.0
       - google-auth==2.14.1
@@ -234,20 +236,24 @@ dependencies:
       - h5py==3.7.0
       - httpcore==0.16.2
       - httpx==0.23.1
+      - identify==2.5.32
       - importlib-metadata==5.1.0
       - iniconfig==1.1.1
       - joblib==1.2.0
       - keras==2.11.0
       - libclang==14.0.6
       - markdown==3.4.1
+      - nodeenv==1.8.0
       - oauthlib==3.2.2
       - opt-einsum==3.3.0
       - packaging==21.3
       - pandas==1.5.2
       - patsy==0.5.3
       - pillow==9.3.0
+      - platformdirs==4.0.0
       - plotly==5.11.0
       - pluggy==1.0.0
+      - pre-commit==3.5.0
       - prefixed==0.5.0
       - protobuf==3.19.6
       - pyasn1==0.4.8
@@ -277,6 +283,7 @@ dependencies:
       - threadpoolctl==3.1.0
       - typing-extensions==4.4.0
       - uvicorn==0.20.0
+      - virtualenv==20.24.7
       - wasabi==0.10.1
       - werkzeug==2.2.2
       - wrapt==1.14.1
