--- a/environment.yml
+++ b/environment.yml
@@ -1,290 +1,234 @@
-name: 221203_enseirb
+name: 241122_tp02_312
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - anyio=3.6.2=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py39hb9d737c_2
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - babel=2.11.0=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - black=22.6.0=py39h06a4308_0
-  - blas=1.1=openblas
-  - bleach=5.0.1=pyhd8ed1ab_0
-  - bottleneck=1.3.5=py39h7deecbd_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.10.11=h06a4308_0
-  - cairo=1.16.0=h18b612c_1001
-  - certifi=2022.12.7=py39h06a4308_0
-  - cffi=1.15.1=py39h74dc2b5_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - conda-package-handling=1.9.0=py39h5eee18b_0
-  - contourpy=1.0.5=py39hdb19cb5_0
-  - cryptography=37.0.1=py39h9ce1e76_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - dbus=1.13.18=hb2f20db_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - absl-py=2.1.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.13=hb9d3cd8_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - astunparse=1.6.3=pyhd8ed1ab_2
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - brotli-python=1.1.0=py312h2ec8cdc_2
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.3=heb4867d_0
+  - ca-certificates=2024.8.30=hbcca054_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.0=hebfffa5_3
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.1=py312h06ac9bb_0
+  - charset-normalizer=3.4.0=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - contourpy=1.3.1=py312h68727a3_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - cyrus-sasl=2.1.27=h54b06d7_7
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.8.9=py312h2ec8cdc_0
   - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - eigen=3.4.0=h4bd325d_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - expat=2.4.9=h6a678d5_0
-  - ffmpeg=4.2.2=h20bf706_0
-  - flit-core=3.8.0=pyhd8ed1ab_0
-  - fontconfig=2.14.1=hef1e5e3_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.11.0=h70c0345_0
-  - giflib=5.2.1=h7b6447c_0
-  - glib=2.69.1=h4ff587b_1
-  - gmp=6.2.1=h58526e2_0
-  - gnutls=3.6.13=h85f3911_1
-  - graphite2=1.3.14=h295c915_1
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
-  - harfbuzz=4.3.0=hd55b92a_0
-  - hdf5=1.10.6=h3ffc7dd_1
-  - icu=58.2=he6710b0_3
-  - idna=3.3=pyhd3eb1b0_0
-  - importlib_resources=5.10.2=pyhd8ed1ab_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - ipykernel=5.5.5=py39hef51801_0
-  - ipython=8.8.0=pyh41d4057_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jpeg=9e=h7f8727e_0
-  - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=4.17.3=pyhd8ed1ab_0
-  - jupyter_client=7.0.6=pyhd8ed1ab_0
-  - jupyter_core=5.1.2=py39hf3d152e_0
-  - jupyter_server=1.23.4=pyhd8ed1ab_0
-  - jupyterlab=3.5.2=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_server=2.18.0=pyhd8ed1ab_0
-  - kiwisolver=1.4.4=py39h6a678d5_0
-  - krb5=1.19.2=hac12032_0
-  - lame=3.100=h7f98852_1001
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libblas=3.9.0=15_linux64_openblas
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libcblas=3.9.0=15_linux64_openblas
-  - libdeflate=1.8=h7f8727e_5
-  - libedit=3.1.20221030=h5eee18b_0
-  - libevent=2.1.12=h8f2d780_0
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=12.2.0=h69a702a_19
-  - libgfortran5=12.2.0=h337968e_19
-  - libgomp=11.2.0=h1234567_1
-  - liblapack=3.9.0=15_linux64_openblas
-  - libllvm10=10.0.1=hbcb73fb_5
-  - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.37=hbc83047_0
-  - libpq=12.9=h16c4e8d_3
-  - libprotobuf=3.20.1=h4ff587b_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.4.0=hecacb30_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libvpx=1.7.0=h439df22_0
-  - libwebp=1.2.4=h11a3e52_0
-  - libwebp-base=1.2.4=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=hfa300c1_0
-  - libxml2=2.9.14=h74e7548_0
-  - libxslt=1.1.35=h4e12654_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - markupsafe=2.1.1=py39hb9d737c_1
-  - matplotlib=3.6.2=py39h06a4308_0
-  - matplotlib-base=3.6.2=py39h945d387_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=2.0.4=pyhd8ed1ab_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py39h7f8727e_0
-  - munkres=1.1.4=py_0
-  - mypy_extensions=0.4.3=py39h06a4308_1
-  - nbclassic=0.4.8=pyhd8ed1ab_0
-  - nbclient=0.7.2=pyhd8ed1ab_0
-  - nbconvert=7.2.7=pyhd8ed1ab_0
-  - nbconvert-core=7.2.7=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.2.7=pyhd8ed1ab_0
-  - nbformat=5.7.1=pyhd8ed1ab_0
-  - ncurses=6.3=h5eee18b_3
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - nettle=3.6=he412f7d_0
-  - notebook=6.5.2=pyha770c72_1
-  - notebook-shim=0.2.2=pyhd8ed1ab_0
-  - nspr=4.33=h295c915_0
-  - nss=3.74=h0370c37_0
-  - numexpr=2.8.4=py39hd2a5715_0
-  - numpy=1.22.3=py39hc58783e_2
-  - openblas=0.3.20=pthreads_h320a7e8_0
-  - opencv=4.6.0=py39hd653453_2
-  - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.3.1=hf7af979_3
-  - openssl=1.1.1s=h7f8727e_0
-  - pandoc=2.19.2=ha770c72_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pathspec=0.9.0=py39h06a4308_0
-  - pcre=8.45=h295c915_0
-  - pexpect=4.8.0=pyh1a96a4e_2
+  - double-conversion=3.3.0=h59595ed_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
+  - expat=2.6.4=h5888daf_0
+  - flatbuffers=24.3.25=h59595ed_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.55.0=py312h178313f_0
+  - freetype=2.12.1=h267a509_2
+  - gast=0.5.5=pyhd8ed1ab_0
+  - giflib=5.2.2=hd590300_0
+  - google-pasta=0.2.0=pyhd8ed1ab_1
+  - graphite2=1.3.13=h59595ed_1003
+  - grpcio=1.65.5=py312h374181b_0
+  - h2=4.1.0=pyhd8ed1ab_0
+  - h5py=3.12.1=nompi_py312hedeef09_102
+  - harfbuzz=9.0.0=hda332d3_1
+  - hdf5=1.14.3=nompi_hdf9ad27_105
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.10=pyhd8ed1ab_0
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.29.0=pyh707e725_0
+  - jedi=0.19.2=pyhff2d567_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - keras=3.6.0=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py312h68727a3_0
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240722.0=cxx17_h5888daf_1
+  - libaec=1.1.3=h59595ed_0
+  - libblas=3.9.0=25_linux64_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcblas=3.9.0=25_linux64_openblas
+  - libclang-cpp19.1=19.1.4=default_hb5137d0_0
+  - libclang13=19.1.4=default_h9c6a7e4_0
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.10.1=hbbe4b11_0
+  - libdeflate=1.22=hb9d3cd8_0
+  - libdrm=2.4.123=hb9d3cd8_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libegl=1.7.0=ha4b6fd6_2
+  - libev=4.33=hd590300_2
+  - libexpat=2.6.4=h5888daf_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgfortran=14.2.0=h69a702a_1
+  - libgfortran-ng=14.2.0=h69a702a_1
+  - libgfortran5=14.2.0=hd5240d6_1
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglib=2.82.2=h2ff4ddf_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libgomp=14.2.0=h77fa898_1
+  - libgrpc=1.65.5=hf5c653b_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=25_linux64_openblas
+  - libllvm19=19.1.4=ha7bfdaf_0
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hd590300_0
+  - libntlm=1.4=h7f98852_1002
+  - libopenblas=0.3.28=pthreads_h94d23a6_1
+  - libopengl=1.7.0=ha4b6fd6_2
+  - libpciaccess=0.18=hd590300_0
+  - libpng=1.6.44=hadc24fc_0
+  - libpq=17.2=h04577a9_0
+  - libprotobuf=5.27.5=h5b01275_2
+  - libre2-11=2024.07.02=hbbce691_1
+  - libsodium=1.0.20=h4ab18f5_0
+  - libsqlite=3.47.0=hadc24fc_1
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx=14.2.0=hc0a3c3a_1
+  - libstdcxx-ng=14.2.0=h4852527_1
+  - libtiff=4.7.0=he137b08_1
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h2c5496b_1
+  - libxml2=2.13.5=hb346dea_0
+  - libxslt=1.1.39=h76b75d6_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - markdown=3.6=pyhd8ed1ab_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
+  - markupsafe=3.0.2=py312h178313f_0
+  - matplotlib=3.9.2=py312h7900ff3_2
+  - matplotlib-base=3.9.2=py312hd3ec401_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_0
+  - ml_dtypes=0.4.0=py312hf9745cd_2
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=9.0.1=h266115a_2
+  - mysql-libs=9.0.1=he0572af_2
+  - namex=0.0.8=pyhd8ed1ab_0
+  - ncurses=6.5=he02047a_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - numpy=1.26.4=py312heda63a1_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openldap=2.6.8=hedd0468_0
+  - openssl=3.4.0=hb9d3cd8_0
+  - opt_einsum=3.4.0=pyhd8ed1ab_0
+  - optree=0.13.1=py312h68727a3_1
+  - packaging=24.2=pyhff2d567_1
+  - pandas=2.2.3=py312hf9745cd_1
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pcre2=10.44=hba22ea6_2
+  - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
-  - pip=22.1.2=py39h06a4308_0
-  - pixman=0.38.0=h516909a_1003
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - ply=3.11=py39h06a4308_0
-  - prometheus_client=0.15.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.36=pyha770c72_0
+  - pillow=11.0.0=py312h7b63e92_0
+  - pip=24.3.1=pyh8b19718_0
+  - pixman=0.43.2=h59595ed_0
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
+  - protobuf=5.27.5=py312h2ec8cdc_0
+  - psutil=6.1.0=py312h66e93f0_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycosat=0.6.3=py39h27cfd23_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pyparsing=3.0.9=py39h06a4308_0
-  - pyqt=5.15.7=py39h6a678d5_1
-  - pyqt5-sip=12.11.0=py39h6a678d5_1
-  - pyrsistent=0.18.0=py39heee7806_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.12=h12debd9_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pyzmq=19.0.2=py39hb69f2a1_2
-  - qt-main=5.15.2=h327a75a_7
-  - qt-webengine=5.15.9=hd2b0992_4
-  - qtwebkit=5.212=h4eab89a_4
-  - readline=8.1.2=h7f8727e_1
-  - requests=2.28.1=py39h06a4308_0
-  - ruamel_yaml=0.15.100=py39h27cfd23_0
-  - seaborn=0.12.1=py39h06a4308_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=63.4.1=py39h06a4308_0
-  - sip=6.6.2=py39h6a678d5_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pyparsing=3.2.0=pyhd8ed1ab_1
+  - pyside6=6.8.0.2=py312h91f0f75_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.12.7=hc5c86c4_0_cpython
+  - python-dateutil=2.9.0.post0=pyhff2d567_0
+  - python-flatbuffers=24.3.25=pyh59ac667_0
+  - python-tzdata=2024.2=pyhd8ed1ab_0
+  - python_abi=3.12=5_cp312
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyzmq=26.2.0=py312hbf22597_3
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.8.0=h6e8976b_0
+  - re2=2024.07.02=h77b4e00_1
+  - readline=8.2=h8228510_1
+  - requests=2.32.3=pyhd8ed1ab_0
+  - rich=13.9.4=pyhd8ed1ab_0
+  - setuptools=75.6.0=pyhff2d567_0
   - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - sqlite=3.39.2=h5082296_0
+  - snappy=1.2.1=ha2e4443_0
   - stack_data=0.6.2=pyhd8ed1ab_0
-  - terminado=0.17.1=pyh41d4057_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h1ccaba5_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tomli=2.0.1=py39h06a4308_0
-  - toolz=0.11.2=pyhd3eb1b0_0
-  - tornado=6.1=py39hb9d737c_3
-  - tqdm=4.64.0=py39h06a4308_0
-  - traitlets=5.8.0=pyhd8ed1ab_0
-  - typing_extensions=4.3.0=py39h06a4308_0
-  - tzdata=2022c=h04d1e81_0
-  - urllib3=1.26.11=py39h06a4308_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.4.2=pyhd8ed1ab_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - x264=1!157.20191217=h7b6447c_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.6=h5eee18b_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zipp=3.11.0=pyhd8ed1ab_0
-  - zlib=1.2.12=h5eee18b_3
-  - zstd=1.5.2=ha4553b6_0
-  - pip:
-      - absl-py==1.3.0
-      - astunparse==1.6.3
-      - attrs==22.1.0
-      - cachetools==5.2.0
-      - cfgv==3.4.0
-      - click==8.1.3
-      - dataclasses==0.6
-      - distlib==0.3.7
-      - evidently==0.2.0
-      - exceptiongroup==1.0.4
-      - fastapi==0.87.0
-      - filelock==3.13.1
-      - flatbuffers==22.11.23
-      - gast==0.4.0
-      - google-auth==2.14.1
-      - google-auth-oauthlib==0.4.6
-      - google-pasta==0.2.0
-      - grpcio==1.50.0
-      - h11==0.14.0
-      - h5py==3.7.0
-      - httpcore==0.16.2
-      - httpx==0.23.1
-      - identify==2.5.32
-      - importlib-metadata==5.1.0
-      - iniconfig==1.1.1
-      - joblib==1.2.0
-      - keras==2.11.0
-      - libclang==14.0.6
-      - markdown==3.4.1
-      - nodeenv==1.8.0
-      - oauthlib==3.2.2
-      - opt-einsum==3.3.0
-      - packaging==21.3
-      - pandas==1.5.2
-      - patsy==0.5.3
-      - pillow==9.3.0
-      - platformdirs==4.0.0
-      - plotly==5.11.0
-      - pluggy==1.0.0
-      - pre-commit==3.5.0
-      - prefixed==0.5.0
-      - protobuf==3.19.6
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
-      - pydantic==1.10.2
-      - pytest==7.2.0
-      - python-multipart==0.0.5
-      - pytz==2022.6
-      - pyyaml==5.4.1
-      - requests-oauthlib==1.3.1
-      - rfc3986==1.5.0
-      - rsa==4.9
-      - scikit-learn==1.1.3
-      - scipy==1.9.3
-      - soundfile==0.12.1
-      - starlette==0.21.0
-      - statsmodels==0.13.5
-      - striprtf==0.0.22
-      - tenacity==8.1.0
-      - tensorboard==2.11.0
-      - tensorboard-data-server==0.6.1
-      - tensorboard-plugin-wit==1.8.1
-      - tensorflow==2.11.0
-      - tensorflow-estimator==2.11.0
-      - tensorflow-io-gcs-filesystem==0.28.0
-      - termcolor==2.1.1
-      - threadpoolctl==3.1.0
-      - typing-extensions==4.4.0
-      - uvicorn==0.20.0
-      - virtualenv==20.24.7
-      - wasabi==0.10.1
-      - werkzeug==2.2.2
-      - wrapt==1.14.1
-prefix: /home/julien/miniconda3/envs/221203_enseirb
+  - tensorboard=2.17.1=pyhd8ed1ab_0
+  - tensorboard-data-server=0.7.0=py312hda17c39_2
+  - tensorflow=2.17.0=cpu_py312h69ecde4_3
+  - tensorflow-base=2.17.0=cpu_py312h4c54302_3
+  - tensorflow-estimator=2.17.0=cpu_py312h4f468f2_3
+  - termcolor=2.5.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.4.1=py312h66e93f0_1
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing-extensions=4.12.2=hd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - tzdata=2024b=hc8b5060_0
+  - unicodedata2=15.1.0=py312h66e93f0_1
+  - urllib3=2.2.3=pyhd8ed1ab_0
+  - wayland=1.23.1=h3e06ad9_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - werkzeug=3.1.3=pyhff2d567_0
+  - wheel=0.45.0=pyhd8ed1ab_0
+  - wrapt=1.16.0=py312h66e93f0_1
+  - xcb-util=0.4.1=hb711507_2
+  - xcb-util-cursor=0.1.5=hb9d3cd8_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.43=hb9d3cd8_0
+  - xorg-libice=1.1.1=hb9d3cd8_1
+  - xorg-libsm=1.2.4=he73a12e_1
+  - xorg-libx11=1.8.10=h4f16b4b_0
+  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.1=hb9d3cd8_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.11=hb9d3cd8_1
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.5=hb9d3cd8_4
+  - xorg-xorgproto=2024.1=hb9d3cd8_1
+  - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h3b0a872_7
+  - zipp=3.21.0=pyhd8ed1ab_0
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstandard=0.23.0=py312hef9b889_1
+  - zstd=1.5.6=ha6fb4c9_0
+prefix: /home/julien/miniconda3/envs/241122_tp02_312
